<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    android:background="#A8DADC">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/oranggg" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="392dp"
        android:layout_height="318dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/basedatadiri" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="50dp"
        android:layout_height="39dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10"
        app:srcCompat="@drawable/icontelepon" />

    <EditText
        android:id="@+id/edt_nomor"
        android:layout_width="282dp"
        android:layout_height="39dp"
        android:layout_marginTop="60dp"
        android:autofillHints="No"
        android:ems="10"
        android:hint="@string/_085234xxxx"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />

    <EditText
        android:id="@+id/edt_alamat"
        android:layout_width="342dp"
        android:layout_height="67dp"
        android:layout_marginBottom="108dp"
        android:backgroundTint="#03C1BCBC"
        android:ems="10"
        android:hint="@string/tulis_alamatmu"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="@+id/imageView10" />

    <ImageButton
        android:id="@+id/ib_nextsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_alamat"
        app:srcCompat="@drawable/simpandanlanjut" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ib_nextsave"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/edt_alamat"
        app:layout_constraintVertical_bias="0.181"
        app:srcCompat="@drawable/garisnama" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/dimana_tempat_tinggalmu"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/edt_nomor" />

</androidx.constraintlayout.widget.ConstraintLayout>