<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    android:background="#A8DADC">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="349dp"
        android:layout_height="478dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gambarorang" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="394dp"
        android:layout_height="315dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/basedatadiri" />

    <EditText
        android:id="@+id/edt_nama"
        android:layout_width="254dp"
        android:autofillHints="No"
        android:hint="@string/john_chris"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="35dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/edt_nama"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@drawable/iconuser" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/kapan_tanggal_lahirmu"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_nama" />

    <EditText
        android:id="@+id/edt_tgl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="No"
        android:hint="@string/_200420"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/rgKelamin"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <RadioGroup
        android:id="@+id/rgKelamin"
        android:layout_width="315dp"
        android:layout_height="74dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/edt_tgl">

        <RadioButton
            android:id="@+id/rbLaki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/male"
            android:checked="true"
           />

        <RadioButton
            android:id="@+id/rbPerempuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/female"
            android:checked="true"
            />
    </RadioGroup>

    <ImageButton
        android:id="@+id/ib_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/rgKelamin"
        app:srcCompat="@drawable/selanjutnya" />

</androidx.constraintlayout.widget.ConstraintLayout>